fixed spacing and border radius

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,8 @@
 
 body{
   margin: 20px 5%;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 16px;
 }
 
 header{
@@ -18,11 +20,12 @@ header{
   color: #fff;
   justify-content: space-around;
   align-items: flex-end;
+  border-radius: 10px;
 }
 
 h1{
   font-size: 40px;
-  font-weight: bolder;
+  font-weight: 800;
   align-self: center;
 }
 
@@ -68,8 +71,9 @@ background-image:  repeating-radial-gradient( circle at 0 0, transparent 0, #e5e
   max-width: 200px;
   max-height: 200px;
   display: inline-flex;
-  margin: 15px;
+  margin: 15px 15px 15px 0; 
   align-self: center;
+  border-radius: 10px;
 }
 
 #aboutMe{
@@ -94,14 +98,16 @@ background-image:  repeating-radial-gradient( circle at 0 0, transparent 0, #e5e
 */
 
 .workHeader{
-  font-weight: bold;
+  font-weight: 800;
+  color: #597536;
   font-size: 24px;
-  margin: 5px 0;
+  text-align: center;
+  padding-bottom: 20px;
 }
 
 .workImg{
-  margin: 5px;
-  padding: 5px;
+  margin: 15px;
+  border-radius: 26px;
 
 }
 .workImg:hover{
@@ -110,7 +116,7 @@ background-image:  repeating-radial-gradient( circle at 0 0, transparent 0, #e5e
 }
 
 .workTitle{
-  font-weight: bold;
+  font-weight: 800;
   margin-bottom: 5px;
   padding: 0px 5px;
   font-size: 90%;
@@ -119,8 +125,8 @@ background-image:  repeating-radial-gradient( circle at 0 0, transparent 0, #e5e
 
 .workCard{
   border: 2px solid black;
+  border-radius: 10px;
   display: flex;
-  margin: 10px;
   flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: center;
@@ -139,7 +145,8 @@ footer{
   align-items: center;
   color: #fff;
   flex-direction: column;
-  margin-top: 5px;
+  margin-top: 25px;
+  border-radius: 10px;
 }
 
 
